--- a/src/design-system/components/NumberInput.css
+++ b/src/design-system/components/NumberInput.css
@@ -210,6 +210,7 @@
 .number-input-stepper-group {
   display: flex;
   flex-direction: column;
+  gap: 1px;
   height: 100%;
   opacity: 0;
   transition: opacity 0.15s ease-in-out;
